# pillows-uploader

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
pilllows_uploader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_upload.py
